app/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: desafio-sre
  name: desafio-sre
  namespace: applications
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: desafio-sre
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: desafio-sre
    spec:
      containers:
      - image: gersontpc/desafio-sre-app:v1.0.0-x64
        imagePullPolicy: Always
        resources:
          requests:
            memory: "500Mi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "5"
        name: desafio-sre-app
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 10
      terminationGracePeriodSeconds: 30
