app/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desafio-sre-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: desafio-sre.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: desafio-sre
                port:
                  number: 8080
